test/syc/good/comma.c
/*
 * Comma expression
 */

int comma(void)
{
	return (void)1, 2;
}
